# CI_CD_Lab

./: CMakeLists.txt  main  main.c  main.cpp  test.cpp  triangle.cpp
.github/workflows/: cmake.yml
